loco-gen/tests/templates/snapshots/generate[agents_mod]@agent.snap
---
source: loco-gen/tests/templates/agent.rs
expression: "fs::read_to_string(agents_path.join(\"mod.rs\")).expect(\"agents/mod.rs missing\")"
---
//! Agents — every code-declared agent lives under this module.
//!
//! Each agent is its own submodule implementing [`loco_rs::agui::Agent`]; the
//! declared name is the agent id stored on a conversation
//! (`conversations.agent_id`). Add one with `cargo loco generate agent <name>`.

pub mod runtime;
pub mod store;

// Per-agent modules (added by the generator):
// agents-mod-inject (do not remove)

use loco_rs::agui::AgentRegistry;

/// Build the registry of every declared agent. The controller resolves an
/// agent by `conversations.agent_id` against this registry.
#[must_use]
pub fn registry() -> AgentRegistry {
    #[allow(unused_mut)]
    let mut registry = AgentRegistry::new();
    // agents-register-inject (do not remove)
    registry
}
