loco-gen/tests/templates/snapshots/generate[controller_file]@agent.snap
---
source: loco-gen/tests/templates/agent.rs
expression: "fs::read_to_string(controllers_path.join(\"agents.rs\")).expect(\"controller file missing\")"
---
//! Thin HTTP mount for the AG-UI agent runtime. All agent logic — persistence,
//! provider, run hub, execution — lives in `loco_rs::agui`; this only hands the
//! framework router the registry of the app's declared agents.

use std::sync::Arc;

use loco_rs::prelude::*;

#[must_use]
pub fn routes() -> Routes {
    loco_rs::agui::controller::routes(Arc::new(crate::agents::registry()))
}
