loco-gen/tests/templates/snapshots/generate[migration_file]@agent.snap
---
source: loco-gen/tests/templates/agent.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
---
use loco_rs::schema::*;
use sea_orm_migration::prelude::*;

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        // Conversations: a chat thread with a code-declared agent. `agent_id` is
        // the agent's registry name (declared in `src/agents/`); `active_run_id`
        // points at the in-flight run so a client can resume or cancel it.
        create_table(
            m,
            "conversations",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("agent_id", ColType::String),
                ("title", ColType::StringNull),
                ("mode", ColType::StringNull),
                ("status", ColType::StringNull),
                ("active_run_id", ColType::StringNull),
                // Tenancy: an app-defined scope value (e.g. {organization_id,
                // project_id}) set by the controller at create and used to scope
                // reads. `metadata` is a free-form app extensibility slot.
                ("scope", ColType::JsonBinaryNull),
                ("metadata", ColType::JsonBinaryNull),
                // Shared, evolving run state (AG-UI STATE_SNAPSHOT / STATE_DELTA).
                ("state", ColType::JsonBinaryNull),
            ],
            &[],
        )
        .await?;

        // Messages: persisted turns (user / assistant / tool). The `parts` JSON
        // blob captures the canonical AG-UI message parts and round-trips back
        // into provider history losslessly (see `history_from_parts`).
        create_table(
            m,
            "messages",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("role", ColType::String),
                ("content", ColType::TextNull),
                ("parts", ColType::JsonBinaryNull),
                ("provider", ColType::StringNull),
                ("model", ColType::StringNull),
                ("usage", ColType::JsonBinaryNull),
                ("status", ColType::StringNull),
            ],
            &[("conversations", "")],
        )
        .await?;

        // Tool calls: one row per tool invocation on an assistant message.
        create_table(
            m,
            "tool_calls",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("tool_call_id", ColType::String),
                ("name", ColType::String),
                ("arguments", ColType::JsonBinaryNull),
                ("status", ColType::String),
                ("result", ColType::JsonBinaryNull),
                ("duration_ms", ColType::BigIntegerNull),
            ],
            &[("messages", "")],
        )
        .await?;

        // Context items: files / system objects / text attached to a
        // conversation and folded into the system prompt.
        create_table(
            m,
            "context_items",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                // Optional message this item is attached to (message-scoped
                // context / attachments). NULL = conversation-scoped.
                ("message_id", ColType::IntegerNull),
                ("kind", ColType::String),
                ("name", ColType::String),
                ("reference", ColType::StringNull),
                ("content", ColType::TextNull),
                ("metadata", ColType::JsonBinaryNull),
            ],
            &[("conversations", "")],
        )
        .await?;

        // Artifacts: persistent deliverables (documents/reports) the agent
        // produced, scoped to a conversation and mutable by the built-in artifact
        // tools. `tags` is a JSON array of strings; `version` bumps on update.
        create_table(
            m,
            "artifacts",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("name", ColType::String),
                ("kind", ColType::StringNull),
                ("content", ColType::TextNull),
                ("reference", ColType::StringNull),
                ("tags", ColType::JsonBinaryNull),
                ("metadata", ColType::JsonBinaryNull),
                ("version", ColType::IntegerWithDefault(1)),
            ],
            &[("conversations", "")],
        )
        .await?;

        // Memories: long-term, retrievable knowledge (RAG). Tenant-scoped via
        // `scope` (or global when NULL) and optionally tied to a conversation.
        // `embedding` is a JSON array of floats when an embedder is configured.
        create_table(
            m,
            "memories",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("scope", ColType::JsonBinaryNull),
                ("conversation_id", ColType::IntegerNull),
                ("kind", ColType::StringNull),
                ("content", ColType::Text),
                ("embedding", ColType::JsonBinaryNull),
                ("metadata", ColType::JsonBinaryNull),
            ],
            &[],
        )
        .await?;

        // Run registry (multi-node run hub): one row per run. The owning node
        // polls `cancel_requested` to stop a run; `last_seq` is the newest event
        // sequence number.
        create_table(
            m,
            "agent_runs",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("run_id", ColType::String),
                ("conversation_id", ColType::IntegerNull),
                ("status", ColType::String),
                ("cancel_requested", ColType::BooleanWithDefault(false)),
                ("last_seq", ColType::BigIntegerWithDefault(0)),
            ],
            &[],
        )
        .await?;

        // Run events (multi-node run hub replay): the ordered per-run event log.
        // A reconnecting client replays `seq > since` from here, then tails live.
        create_table(
            m,
            "agent_events",
            &[
                ("id", ColType::PkAuto),
                ("pid", ColType::UuidUniq),
                ("run_id", ColType::String),
                ("seq", ColType::BigInteger),
                ("name", ColType::String),
                ("payload", ColType::JsonBinaryNull),
            ],
            &[],
        )
        .await?;

        Ok(())
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        drop_table(m, "agent_events").await?;
        drop_table(m, "agent_runs").await?;
        drop_table(m, "memories").await?;
        drop_table(m, "artifacts").await?;
        drop_table(m, "context_items").await?;
        drop_table(m, "tool_calls").await?;
        drop_table(m, "messages").await?;
        drop_table(m, "conversations").await?;
        Ok(())
    }
}
