loco-gen/tests/templates/snapshots/generate_results@agent.snap
---
source: loco-gen/tests/templates/agent.rs
expression: collect_messages(&gen_result)
---
* Agent `support` scaffolded under `src/agents/support/`.

Next steps:
  1. Enable the `agui` feature on loco-rs in Cargo.toml:
       loco-rs = { version = "*", features = ["agui"] }
  2. Apply the migration + entity sync:
       $ cargo loco db migrate && cargo loco db entities
  3. Configure the provider + hub under `agui:` in config/*.yaml (see the
     `agui.provider.api_key` / `agui.hub` keys).
  4. Open a conversation for agent id `support` and POST to
       /api/conversations/{conversation_pid}/run
     with an AG-UI `RunAgentInput` body to stream a response.

Customize this agent's prompt/model here, its tools in `tools.rs`, and its
lifecycle callbacks in `hooks.rs`.

* Agent controller `agents` was added (a one-line mount of the framework router
`loco_rs::agui::controller::routes`).

Endpoints (all under `/api`):
  GET  agents                                  list declared agents
  GET  agents/{agent_id}                        one agent
  GET  agents/{agent_id}/conversations          list conversations
  POST agents/{agent_id}/conversations          open a conversation
  GET  conversations/{pid}/messages             message history
  POST conversations/{pid}/context              attach context
  POST conversations/{pid}/run                  start a run (SSE, resumable)
  GET  conversations/{pid}/stream?since=N        resume the live stream
  POST conversations/{pid}/cancel               stop the active run

Frontend contract: POST `/run` to start and tail; on a dropped connection,
GET `/stream?since=<lastEventId>` to resume (a fetch abort does NOT cancel the
run); a Stop button calls POST `/cancel`.

Durability: runs are driven inline by default. Set `agui.execution: { kind:
worker }` (with `workers.mode: BackgroundQueue` and a DB-backed `agui.hub`) to
hand each run to a background worker so it survives a process restart. Then
register the worker in `connect_workers`:

    queue
        .register(loco_rs::agui::worker::RunAgentJob::with_registry(
            ctx,
            std::sync::Arc::new(crate::agents::registry()),
        ))
        .await?;

* Agent migration added! Apply it with `$ cargo loco db migrate && cargo loco db entities`.
