loco-gen/tests/templates/snapshots/inject[controller_mod_rs]@agent.snap
---
source: loco-gen/tests/templates/agent.rs
expression: "fs::read_to_string(controllers_path.join(\"mod.rs\")).expect(\"mod.rs injection failed\")"
---

pub mod agents;
